# pytest-django-liveserver-ssl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  initial.sh  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  index.rst
pytest_django_liveserver_ssl/: _types.py  fixtures.py  helpers.py  live_server_ssl_helper.py  plugin.py  ssl_certificate.py
tests/: conftest.py  settings.py  settings_test.py  test_custom_ca.py  test_custom_cert.py  test_example.py  test_generic.py  test_ssl_certificate.py
tests/app/: models.py  urls.py
tests/certs/: README.md  RootCA.crt  RootCA.key  localhost.crt  localhost.key
